Fix JDK 8 compatibility and complete missing service implementations